# ShaderEnv

./: .gitignore  .gitmodules  readme.md
agent/: AgentEmbedding.cpp  CMakeLists.txt  search_demo.cpp
agent/.cache/clangd/index/: agent.hpp.D47CF21C669EC59C.idx  amx.cpp.F715DFFD2960BD91.idx  amx.h.DB79F39E40DBFD37.idx  arch-fallback.h.AC31B72E51EBB527.idx  binary-ops.cpp.7BB7FDA0A83DE173.idx  binary-ops.h.7028E00AB982ABE3.idx  common.h.0C62A840AB107840.idx  common.h.8E1FE716F2EE32BC.idx  ggml-alloc.c.F4302F9267B4FE03.idx  ggml-alloc.h.656A45A2C0498ED4.idx  ggml-backend-impl.h.E6219AC3440C70D5.idx  ggml-backend-reg.cpp.4EB2D29BE458FED5.idx  ggml-backend.cpp.C97BDDCDD30ADC9D.idx  ggml-backend.h.3DD79E41ABF6CC58.idx  ggml-blas.cpp.17ECE5B73EB388ED.idx  ggml-blas.h.B6CE575DD4618A99.idx  ggml-common.h.CEDB0BAA7CF5B317.idx  ggml-cpp.h.FF20E5C1110136F5.idx  ggml-cpu-impl.h.14FDA98EC5B2A6A4.idx  ggml-cpu.c.461CCA13AA73D86C.idx  ggml-cpu.cpp.96D099529D16CFE4.idx  ggml-cpu.h.CFB56D288363C009.idx  ggml-impl.h.620961273D297736.idx  ggml-metal-common.cpp.0964D2756800BC3A.idx  ggml-metal-common.h.064A9E56A9948B73.idx  ggml-metal-impl.h.D53A52501E3CC043.idx  ggml-metal.h.ABDE02F08D633CE8.idx  ggml-metal.m.EC979A797F3324FA.idx  ggml-opt.cpp.2C0830F512A9CCAB.idx  ggml-opt.h.A30DE663F3B24CC5.idx  ggml-quants.c.3890918DD30A9EEE.idx  ggml-quants.h.12CA57E77801B98D.idx  ggml-threading.cpp.71ED4ADE0837FFA6.idx  ggml-threading.h.77FF9C60C04A1F64.idx  ggml.c.3DADC7D8E8DEB7C6.idx  ggml.cpp.5F0A0BE121A6231B.idx  ggml.h.75295E0A09604570.idx  gguf.cpp.6C2FDD463A39EC78.idx  gguf.h.FB2524691901389F.idx  hbm.cpp.2EB1D6A33BD02FFD.idx  (+72 more)
agent/data/: docs.jsonl  query.jsonl  query.txt  shader_vocab.json  shader_vocab.jsonl
agent/examples/: encode_demo.cpp
agent/scripts/: embed_file.cpp  search.cpp
agent/src/: AgentEmbedding.hpp  agent.hpp  embed_vocab.cpp  plan_shader.cpp
data/: docs.txt  shader_vocab.json
shaderLib/: ShaderLibMaster.hpp  ShaderLibUtility.hpp  metaShaderLib.hpp  metaShaderUtility.hpp
shaderLib/emiters/: behave.hpp  color.hpp  layering.hpp  structures.hpp  symmetry.hpp  textures.hpp
shaders/: generated_shader.frag  newShader2.frag  newShader4.frag  updatedTestShader.frag
src/: MetaShader-V1.cpp  MetaShaderTesting.cpp  ShaderTesting.cpp  metaShaderLib.hpp  scene5.cpp
